--- a/SECB/app/src/main/res/layout/gallery_list_fragment.xml
+++ b/SECB/app/src/main/res/layout/gallery_list_fragment.xml
@@ -41,6 +41,30 @@
             android:src="@drawable/news_img_sample"
             android:cropToPadding="true"/>
     </LinearLayout>
+
+
+    <!--for displaying youtube video-->
+    <LinearLayout
+        android:id="@+id/layout_videoPlayerContainer"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:gravity="center"
+        android:background="#CC000000"
+        android:layout_marginTop="@dimen/home_graphs_card_padding"
+        android:layout_marginBottom="@dimen/home_graphs_card_padding"
+        android:layout_centerInParent="true"
+        android:clickable="true"
+        android:visibility="gone">
+
+        <FrameLayout
+            android:id="@+id/fragment_youtube_player"
+            android:name="com.google.android.youtube.player.YouTubePlayerFragment"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            />
+
+    </LinearLayout>
     <TextView
         android:id="@+id/txtv_noData"
         android:layout_width="match_parent"
