--- a/SECB/app/src/main/res/layout/youtube_player_activity.xml
+++ b/SECB/app/src/main/res/layout/youtube_player_activity.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               xmlns:tools="http://schemas.android.com/tools"
               android:layout_width="match_parent"
@@ -8,12 +7,14 @@
               android:paddingRight="@dimen/activity_horizontal_margin"
               android:paddingTop="@dimen/activity_vertical_margin"
               android:orientation="vertical"
-              tools:context=".MainActivity" >
+              android:background="@drawable/image_dark_layer"
+              android:gravity="center"
 
-    <FrameLayout
-        android:id="@+id/fragment_youtube_player"
+    >
+
+    <com.google.android.youtube.player.YouTubePlayerView
+        android:id="@+id/youtube_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="1"/>
-
+        android:layout_gravity="center"/>
 </LinearLayout>
